// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<search /> should render 1`] = `
.c3 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c3:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c3[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c3[aria-pressed="true"]:not([disabled]):hover,
.c3[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c3[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c3[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c2 ul {
  z-index: 100;
}

.c2 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c0 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c0 .search__form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: var(--spacing-small) 0;
  position: relative;
  height: 5rem;
  width: 90%;
}

.c0 .search__form button {
  margin-left: 0.5rem;
}

.c0 .search__fields {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
}

.c0 .search__input__icon {
  position: absolute;
  left: 0;
  top: 0;
  padding: 1.25rem 0 0 1.25rem;
  width: 2.55rem;
}

.c0 .search__sources {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  margin: 0.625rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ebeff3;
  border: none;
  border-radius: 0.25rem;
}

.c0 .search__sources__icon {
  position: absolute;
  margin: 0 calc(1.25rem / 2);
  width: 1.25rem;
  height: 1.25rem;
}

.c0 .search__sources__value {
  padding: 0.5rem 2rem 0.5rem 2.5em;
  color: #26353f;
  background-color: transparent;
  background-position: top 1rem right 0.75em;
  border: 1px solid transparent;
}

.c0 .search__input {
  margin: 0;
  padding: 0 12.8rem 0 4rem;
  height: 100%;
  width: 100%;
  font-size: inherit;
  font-family: inherit;
  line-height: calc(3.625rem - 1px);
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c0 .search__input:focus {
  border-color: #006be6;
  outline: none;
}

@media (max-width:980px) {
  .c0 .search__sources {
    display: none;
  }

  .c0 .search__input {
    padding-right: 1rem;
  }
}

@media (max-width:600px) {
  .c0 .search__form {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }

  .c0 .search__form button {
    margin-left: 0;
  }

  .c0 .search__input__icon {
    display: none;
  }

  .c0 .search__fields {
    margin-bottom: 0.5rem;
  }

  .c0 .search__input {
    padding: 1rem;
  }
}

<div>
  <div
    class="section-white shadow-bottom search-widget"
  >
    <div
      class="container "
    >
      <div
        class="c0"
      >
        <header>
          <h1
            class="no-margin"
          >
            Posez votre question sur le droit du travail
          </h1>
          <br />
        </header>
        <form
          class="search__form"
        >
          <div
            class="search__fields"
          >
            <svg
              class="search__input__icon"
              viewBox="0 0 20 20"
            >
              <title />
              <path
                d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <label
              class="search__sources"
              for="contentSource"
            >
              <span
                class="hidden"
              >
                Filtrer par type de contenu
              </span>
              <svg
                class="search__sources__icon"
                viewBox="0 0 512 512"
              >
                <title>
                  Icône réponse
                </title>
                <path
                  d="M346 319c-5.522 0-10 4.477-10 10v69c0 27.57-22.43 50-50 50H178.032c-5.521 0-9.996 4.473-10 9.993l-.014 19.882-23.868-23.867a10.003 10.003 0 0 0-9.171-6.008H70c-27.57 0-50-22.43-50-50V244c0-27.57 22.43-50 50-50h101c5.522 0 10-4.477 10-10s-4.478-10-10-10H70c-38.598 0-70 31.402-70 70v154c0 38.598 31.402 70 70 70h59.858l41.071 41.071a9.997 9.997 0 0 0 10.894 2.169 10 10 0 0 0 6.177-9.233l.024-34.007H286c38.598 0 70-31.402 70-70v-69c0-5.523-4.478-10-10-10z"
                  fill="currentColor"
                />
                <path
                  d="M366.655 0h-25.309C261.202 0 196 65.202 196 145.346s65.202 145.345 145.345 145.345h25.309c12.509 0 24.89-1.589 36.89-4.729l37.387 37.366A10 10 0 0 0 458 316.255v-57.856c15.829-12.819 28.978-29.012 38.206-47.102C506.687 190.751 512 168.562 512 145.346 512 65.202 446.798 0 366.655 0zm75.328 245.535a10.003 10.003 0 0 0-3.983 7.988v38.6l-24.471-24.458a10.003 10.003 0 0 0-10.006-2.485c-11.903 3.658-24.307 5.512-36.868 5.512h-25.309c-69.117 0-125.346-56.23-125.346-125.346C216 76.23 272.23 20 341.346 20h25.309C435.771 20 492 76.23 492 145.346c0 39.731-18.23 76.249-50.017 100.189z"
                  fill="currentColor"
                />
                <path
                  d="M399.033 109.421c-1.443-20.935-18.319-37.811-39.255-39.254-11.868-.815-23.194 3.188-31.863 11.281-8.55 7.981-13.453 19.263-13.453 30.954 0 5.523 4.478 10 10 10s10-4.477 10-10c0-6.259 2.522-12.06 7.1-16.333 4.574-4.269 10.552-6.382 16.842-5.948 11.028.76 19.917 9.649 20.677 20.676.768 11.137-6.539 20.979-17.373 23.403-8.778 1.964-14.908 9.592-14.908 18.549v24.025c0 5.523 4.478 10 10 10 5.523 0 10-4.477 9.999-10v-23.226c20.15-4.868 33.669-23.306 32.234-44.127zM363.87 209.26a10.076 10.076 0 0 0-7.07-2.93c-2.63 0-5.21 1.07-7.07 2.93a10.076 10.076 0 0 0-2.93 7.07c0 2.64 1.071 5.22 2.93 7.08 1.86 1.86 4.44 2.92 7.07 2.92s5.21-1.06 7.07-2.92a10.1 10.1 0 0 0 2.93-7.08c0-2.63-1.071-5.21-2.93-7.07zM275 310H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h211c5.523 0 10-4.477 10-10s-4.478-10-10-10zm7.069 58.93A10.072 10.072 0 0 0 275 366c-2.63 0-5.21 1.07-7.07 2.93A10.071 10.071 0 0 0 265 376c0 2.63 1.07 5.21 2.93 7.07 1.86 1.86 4.44 2.93 7.07 2.93s5.21-1.07 7.069-2.93A10.055 10.055 0 0 0 285 376c0-2.63-1.071-5.21-2.931-7.07zM235.667 366H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h171.667c5.523 0 10-4.477 10-10s-4.478-10-10-10zM210 254H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h146c5.523 0 10-4.477 10-10s-4.478-10-10-10z"
                  fill="currentColor"
                />
              </svg>
              <select
                class="search__sources__value"
                id="contentSource"
                name="source"
              >
                <option
                  value=""
                >
                  Tous contenus
                </option>
                <option
                  value="faq"
                >
                  Réponses
                </option>
                <option
                  value="code_du_travail"
                >
                  Code du travail
                </option>
                <option
                  value="fiches"
                >
                  Fiches
                </option>
                <option
                  value="modeles_de_courriers"
                >
                  Modèles
                </option>
                <option
                  value="outils"
                >
                  Outils
                </option>
                <option
                  value="annuaire"
                >
                  Annuaire
                </option>
              </select>
            </label>
            <label
              class="c1"
              for="main-search-input"
            >
              <span
                class="hidden"
              >
                Rechercher
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="search__input"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value=""
                />
                <div
                  class="c2"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                />
              </div>
            </label>
          </div>
          <button
            aria-pressed="false"
            class="c3"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<search /> should render suggestions 1`] = `
.c8 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c8:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c8[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c8[aria-pressed="true"]:not([disabled]):hover,
.c8[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c8[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c3 p {
  margin: 0;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c2 ul {
  z-index: 100;
}

.c2 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c0 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c0 .search__form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: var(--spacing-small) 0;
  position: relative;
  height: 5rem;
  width: 90%;
}

.c0 .search__form button {
  margin-left: 0.5rem;
}

.c0 .search__fields {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
}

.c0 .search__input__icon {
  position: absolute;
  left: 0;
  top: 0;
  padding: 1.25rem 0 0 1.25rem;
  width: 2.55rem;
}

.c0 .search__sources {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  margin: 0.625rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ebeff3;
  border: none;
  border-radius: 0.25rem;
}

.c0 .search__sources__icon {
  position: absolute;
  margin: 0 calc(1.25rem / 2);
  width: 1.25rem;
  height: 1.25rem;
}

.c0 .search__sources__value {
  padding: 0.5rem 2rem 0.5rem 2.5em;
  color: #26353f;
  background-color: transparent;
  background-position: top 1rem right 0.75em;
  border: 1px solid transparent;
}

.c0 .search__input {
  margin: 0;
  padding: 0 12.8rem 0 4rem;
  height: 100%;
  width: 100%;
  font-size: inherit;
  font-family: inherit;
  line-height: calc(3.625rem - 1px);
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c0 .search__input:focus {
  border-color: #006be6;
  outline: none;
}

.c4 {
  display: inline-block;
}

.c5 {
  display: inline-block;
}

.c6 {
  display: inline-block;
}

.c7 {
  display: inline-block;
}

@media (max-width:980px) {
  .c0 .search__sources {
    display: none;
  }

  .c0 .search__input {
    padding-right: 1rem;
  }
}

@media (max-width:600px) {
  .c0 .search__form {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }

  .c0 .search__form button {
    margin-left: 0;
  }

  .c0 .search__input__icon {
    display: none;
  }

  .c0 .search__fields {
    margin-bottom: 0.5rem;
  }

  .c0 .search__input {
    padding: 1rem;
  }
}

<div>
  <div
    class="section-white shadow-bottom search-widget"
  >
    <div
      class="container "
    >
      <div
        class="c0"
      >
        <header>
          <h1
            class="no-margin"
          >
            Posez votre question sur le droit du travail
          </h1>
          <br />
        </header>
        <form
          class="search__form"
        >
          <div
            class="search__fields"
          >
            <svg
              class="search__input__icon"
              viewBox="0 0 20 20"
            >
              <title />
              <path
                d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <label
              class="search__sources"
              for="contentSource"
            >
              <span
                class="hidden"
              >
                Filtrer par type de contenu
              </span>
              <svg
                class="search__sources__icon"
                viewBox="0 0 512 512"
              >
                <title>
                  Icône réponse
                </title>
                <path
                  d="M346 319c-5.522 0-10 4.477-10 10v69c0 27.57-22.43 50-50 50H178.032c-5.521 0-9.996 4.473-10 9.993l-.014 19.882-23.868-23.867a10.003 10.003 0 0 0-9.171-6.008H70c-27.57 0-50-22.43-50-50V244c0-27.57 22.43-50 50-50h101c5.522 0 10-4.477 10-10s-4.478-10-10-10H70c-38.598 0-70 31.402-70 70v154c0 38.598 31.402 70 70 70h59.858l41.071 41.071a9.997 9.997 0 0 0 10.894 2.169 10 10 0 0 0 6.177-9.233l.024-34.007H286c38.598 0 70-31.402 70-70v-69c0-5.523-4.478-10-10-10z"
                  fill="currentColor"
                />
                <path
                  d="M366.655 0h-25.309C261.202 0 196 65.202 196 145.346s65.202 145.345 145.345 145.345h25.309c12.509 0 24.89-1.589 36.89-4.729l37.387 37.366A10 10 0 0 0 458 316.255v-57.856c15.829-12.819 28.978-29.012 38.206-47.102C506.687 190.751 512 168.562 512 145.346 512 65.202 446.798 0 366.655 0zm75.328 245.535a10.003 10.003 0 0 0-3.983 7.988v38.6l-24.471-24.458a10.003 10.003 0 0 0-10.006-2.485c-11.903 3.658-24.307 5.512-36.868 5.512h-25.309c-69.117 0-125.346-56.23-125.346-125.346C216 76.23 272.23 20 341.346 20h25.309C435.771 20 492 76.23 492 145.346c0 39.731-18.23 76.249-50.017 100.189z"
                  fill="currentColor"
                />
                <path
                  d="M399.033 109.421c-1.443-20.935-18.319-37.811-39.255-39.254-11.868-.815-23.194 3.188-31.863 11.281-8.55 7.981-13.453 19.263-13.453 30.954 0 5.523 4.478 10 10 10s10-4.477 10-10c0-6.259 2.522-12.06 7.1-16.333 4.574-4.269 10.552-6.382 16.842-5.948 11.028.76 19.917 9.649 20.677 20.676.768 11.137-6.539 20.979-17.373 23.403-8.778 1.964-14.908 9.592-14.908 18.549v24.025c0 5.523 4.478 10 10 10 5.523 0 10-4.477 9.999-10v-23.226c20.15-4.868 33.669-23.306 32.234-44.127zM363.87 209.26a10.076 10.076 0 0 0-7.07-2.93c-2.63 0-5.21 1.07-7.07 2.93a10.076 10.076 0 0 0-2.93 7.07c0 2.64 1.071 5.22 2.93 7.08 1.86 1.86 4.44 2.92 7.07 2.92s5.21-1.06 7.07-2.92a10.1 10.1 0 0 0 2.93-7.08c0-2.63-1.071-5.21-2.93-7.07zM275 310H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h211c5.523 0 10-4.477 10-10s-4.478-10-10-10zm7.069 58.93A10.072 10.072 0 0 0 275 366c-2.63 0-5.21 1.07-7.07 2.93A10.071 10.071 0 0 0 265 376c0 2.63 1.07 5.21 2.93 7.07 1.86 1.86 4.44 2.93 7.07 2.93s5.21-1.07 7.069-2.93A10.055 10.055 0 0 0 285 376c0-2.63-1.071-5.21-2.931-7.07zM235.667 366H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h171.667c5.523 0 10-4.477 10-10s-4.478-10-10-10zM210 254H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h146c5.523 0 10-4.477 10-10s-4.478-10-10-10z"
                  fill="currentColor"
                />
              </svg>
              <select
                class="search__sources__value"
                id="contentSource"
                name="source"
              >
                <option
                  value=""
                >
                  Tous contenus
                </option>
                <option
                  value="faq"
                >
                  Réponses
                </option>
                <option
                  value="code_du_travail"
                >
                  Code du travail
                </option>
                <option
                  value="fiches"
                >
                  Fiches
                </option>
                <option
                  value="modeles_de_courriers"
                >
                  Modèles
                </option>
                <option
                  value="outils"
                >
                  Outils
                </option>
                <option
                  value="annuaire"
                >
                  Annuaire
                </option>
              </select>
            </label>
            <label
              class="c1"
              for="main-search-input"
            >
              <span
                class="hidden"
              >
                Rechercher
              </span>
              <div
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="search__input"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value="yolo"
                />
                <div
                  class="c2"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                >
                  <ul
                    role="listbox"
                    style="margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; border: 1px solid silver; border-radius: 3px; background: white; position: absolute; left: 0px; right: 0px; box-shadow: 0 10px 10px -10px #b7bcdf;"
                  >
                    <li
                      aria-selected="false"
                      data-suggestion-index="0"
                      id="react-autowhatever-cdtn-documents-suggester--item-0"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="c3"
                      >
                        <div
                          class="c4"
                        >
                          foo
                        </div>
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      data-suggestion-index="1"
                      id="react-autowhatever-cdtn-documents-suggester--item-1"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="c3"
                      >
                        <div
                          class="c5"
                        >
                          foobar
                        </div>
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      data-suggestion-index="2"
                      id="react-autowhatever-cdtn-documents-suggester--item-2"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="c3"
                      >
                        <div
                          class="c6"
                        >
                          foo bar ?
                        </div>
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      data-suggestion-index="3"
                      id="react-autowhatever-cdtn-documents-suggester--item-3"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="c3"
                      >
                        <div
                          class="c7"
                        >
                          foo bazzz
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </label>
          </div>
          <button
            aria-pressed="false"
            class="c8"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
